--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="https://assets.adobedtm.com/e72b4113c11a/681810df7642/launch-1edbfd6e2065.min.js" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop - My eStore</title>
