--- a/index.html
+++ b/index.html
@@ -1,57 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
-<script src="https://assets.adobedtm.com/e72b4113c11a/681810df7642/launch-1607e9122816-development.min.js" async></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My eCommerce Store</title>
-    <link rel="stylesheet" href="styles.css">
+     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
+     <script src="https://assets.adobedtm.com/e72b4113c11a/681810df7642/launch-1edbfd6e2065.min.js" async></script>
 </head>
-<body>
-    <header>
-        <nav>
-            <div class="logo">
-                <h1>My eStore</h1>
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html">Cart</a></li>
-            </ul>
-        </nav>
-    </header>
+<title>Akshatha Github page</title>
+<body bgcolor='#FFFFFF' leftmargin='0' topmargin='0' rightmargin='0' marginwidth='0' marginheight='0'>
 
-    <section class="banner">
-        <h2>Welcome to My eStore!</h2>
-        <p>Shop the best products at amazing prices.</p>
-        <a href="shop.html" class="cta-btn">Shop Now</a>
-    </section>
 
-    <section class="featured-products">
-        <h2>Featured Products</h2>
-        <div class="product-card">
-            <img src="https://via.placeholder.com/150" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>$19.99</p>
-            <a href="product.html" class="btn">View Details</a>
-        </div>
-        <div class="product-card">
-            <img src="https://via.placeholder.com/150" alt="Product 2">
-            <h3>Product 2</h3>
-            <p>$29.99</p>
-            <a href="product.html" class="btn">View Details</a>
-        </div>
-        <div class="product-card">
-            <img src="https://via.placeholder.com/150" alt="Product 3">
-            <h3>Product 3</h3>
-            <p>$39.99</p>
-            <a href="product.html" class="btn">View Details</a>
-        </div>
-    </section>
+This Page has Adobe Anlaytics implemented via Launch for WAP COE Training web property configured in accenture sandbox </br>
+  
+     <p>  <a href="https://www.facebook.com">facebook</a></p>
+                                            
+        <script type="text/javascript">_satellite.pageBottom();</script>
 
-    <footer>
-        <p>&copy; 2025 My eStore</p>
-    </footer>
 </body>
 </html>
